--- a/css/estilo.css
+++ b/css/estilo.css
@@ -270,15 +270,70 @@
             height: 350px;
             background-color: #000;
             position: absolute;
-            top:60px;
+            top: 60px;
             flex-direction: column;
             justify-content: space-around;
         }
-        .menu ul a:hover{
+        .menu ul a:hover {
             background-color: unset;
         }
         .btnMenu{
+            display: block;
+        }
+        .banner{
+            padding-top: 150px;
+            height: auto;
+        }
+        .banner-text h1{
+            font-size: 70px;
+        }
+        .banner-text p{
+            font-size: 40px;
+        }
+        .sobre h2{
+            font-size: 60px;
+            text-align: center;
+        }
+        .artigo-sobre h3{
+            font-size: 60px;
+            text-align: center;
+        }
+        .artigo-text-sobre p{
+            font-size:22px;
+        }
+        .info{
+            width: 100%;
+            height: 600px;
+            background-image: url("../img/imagem-fundo-info.jpg");
+            background-size: cover;
+            padding: 3em;
+        }
+        .info-card{
+            text-align: center;
+        }
+        .info p{
+            width: 220px;
+        }
+        .info-flex{
             display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
         }
+        .endereço h2{
+            font-size: 60px;
+            text-align: center;
+            /* padding-top: 40px; */
         }
-        
+        .end-text p{
+            font-size: 20px;
+            padding-right: 20px;
+        }
+        .end-text img{
+            margin-top: 2em;
+        }
+        .rodape-flex p{
+            padding-top: 5px;
+            font-size: 20px;
+        }
+    }
