Responsividade 767px arrumada

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -332,7 +332,7 @@
         .end-text img{
             margin-top: 2em;
         }
-        .rodape-flex p{
+        .rodapé p{
             padding-top: 5px;
             font-size: 20px;
         }
