--- a/css/estilo.css
+++ b/css/estilo.css
@@ -337,3 +337,61 @@
             font-size: 20px;
         }
     }
+    @media screen and (max-width: 575px){
+        .banner{
+            padding-top: 150px;
+            height: auto;
+        }
+        .banner-text h1{
+            font-size: 60px;
+        }
+        .banner-text p{
+            font-size: 35px;
+        }
+        .sobre h2{
+            font-size: 60px;
+            text-align: center;
+        }
+        .artigo-sobre h3{
+            font-size: 60px;
+            text-align: center;
+        }
+        .info{
+            width: 100%;
+            height: 700px;
+            background-image: url(../img/imagem-fundo-info.jpg);
+            background-size: cover;
+        }
+        .info-card{
+            text-align: center;
+            padding: 3em;
+        }
+        .info p{
+            width: 220px;
+        }
+        .info-flex{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .endereço h2{
+            font-size: 60px;
+            text-align: center;
+            padding-top: 40px;
+        }
+        .end-text p{
+            font-size: 20px;
+            padding-right: 20px;
+        }
+        .end-text img{
+            margin-top: 2em;
+        }
+        .rodape{
+            margin-top: 15px;
+        }
+        .rodape p{
+            padding-top: 5px;
+            font-size: 15px;
+        }
+    }
